[gd_scene load_steps=10 format=3 uid="uid://hod5ouvqdw5u"]

[ext_resource type="Script" path="res://engine/dialog.gd" id="1_on6jx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rpvfw"]
content_margin_left = 24.0
content_margin_top = 3.0
content_margin_right = 24.0
content_margin_bottom = 9.0
bg_color = Color(0.117647, 0.117647, 0.117647, 0.92549)
border_width_top = 2
border_color = Color(0.199086, 0.199086, 0.199086, 1)

[sub_resource type="SystemFont" id="SystemFont_eq6bv"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_s36km"]
line_spacing = 0.0
font = SubResource("SystemFont_eq6bv")
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0l21m"]
content_margin_left = 24.0
content_margin_top = 22.0
content_margin_right = 50.0
content_margin_bottom = 23.0
bg_color = Color(0.105882, 0.105882, 0.105882, 0.811765)
border_width_top = 2
border_color = Color(0.199086, 0.199086, 0.199086, 1)

[sub_resource type="LabelSettings" id="LabelSettings_l4rdq"]
font_size = 24

[sub_resource type="Animation" id="Animation_2o7em"]
length = 0.001

[sub_resource type="Animation" id="Animation_q8bme"]
resource_name = "advance_indicator"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ye604"]
_data = {
"RESET": SubResource("Animation_2o7em"),
"advance_indicator": SubResource("Animation_q8bme")
}

[node name="Dialog" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
script = ExtResource("1_on6jx")
speaker = "Ryder"
text = "Have you ever had a dream that, that, um, that you had, uh, that you had to, you could, you do, you wit, you wa, you could do so, you do you could, you want, you wanted him to do you so much you could do anything?
"
reveal_speed = 50

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -210.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0
alignment = 2

[node name="SpeakerPanel" type="PanelContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_rpvfw")

[node name="SpeakerLabel" type="Label" parent="VBox/SpeakerPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
mouse_filter = 1
text = "Ryder"
label_settings = SubResource("LabelSettings_s36km")
vertical_alignment = 1

[node name="DialogPanel" type="PanelContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_0l21m")

[node name="DialogLabel" type="Label" parent="VBox/DialogPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Have you ever had a dream that, that, um, that you had, uh, that you had to, you could, you do, you wit, you wa, you could do so, you do you could, you want, you wanted him to do you so much you could do anything?"
label_settings = SubResource("LabelSettings_l4rdq")
autowrap_mode = 3
visible_characters = 214
visible_characters_behavior = 1
visible_ratio = 1.00469

[node name="AdvanceIndicator" type="Control" parent="."]
unique_name_in_owner = true
modulate = Color(0.541176, 0.541176, 0.541176, 1)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -30.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 1

[node name="Polygon2D" type="Polygon2D" parent="AdvanceIndicator"]
position = Vector2(1.26918, 0)
polygon = PackedVector2Array(-6, -8, 8, 0, -6, 8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="AdvanceIndicator/Polygon2D"]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_ye604")
}
autoplay = "advance_indicator"
speed_scale = 2.0
next/advance_indicator = &"advance_indicator"
